2012-03-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, control.c, sfcb.cfg.pre.in:
	[ 3367333 ] New entry point for authentication library

2012-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 3499930 ] Check file repository writes

	* httpAdapter.c, cimRequest.c, sfcBroker.c:
	[ 3440300 ] Allow forced chunked responses
	[ 3492362 ] Problem with whitespace trimming if local connect only

2012-03-07 Dave Heller <hellerda@us.ibm.com>

	* httpAdapter.c:
	[ 3498719 ] Better SSL error reporting for sfcb

2012-03-07  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimAccountPassthroughProvider.c:
	[ 3426027 ] cimAccountPassThrough does not set return code

	* indCIMXMLHandler.c, interopProvider.c, test/xmltest/LD_modify*:
	[ 3498932 ] Implement ModifyInstance for CIM_ListenerDestination

	* 10_interop.mof, default.reg.in, interopServerProvider.c:
	[ 3498275 ] Remove __Namespace

2012-03-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 3498044 ] RIEnabled conflicts with settable retries

2012-03-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, providerMgr.c:
	[ 3497950 ] SFCB Semaphore Handling Improvements
	(patch by Viktor Mihajlovski)

	* providerDrv.c, providerMgr.c:
	[ 3497765 ] Better Error Handling in sfcb Provider Manager and Driver
	(patch by Viktor Mihajlovski)

2012-03-06 Dave Heller <hellerda@us.ibm.com>

	* extra/sfcb-ps:
	[ 3497831 ] Updates to sfcb-ps test script

2012-03-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3496383 ] Faster Return from CBDeliverIndication

2012-03-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, indRetryTest.sh:
	[ 3484083] Exclude SFCBIndicationID 

2012-03-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3496061 ] IndicationSubscription May Be Undeletable

2012-02-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerMgr.c: