@@ -26,6 +26,15 @@
 
 #define SFCB_PAM_APP "sfcb"
 
+struct auth_extras {
+  void (*release)(pam_handle_t*);
+  char* clientIp;
+  void* authHandle;
+  const char* role;
+};
+typedef struct auth_extras AuthExtras;
+
+
 static int
 sfcBasicConv(int num_msg, const struct pam_message **msg,
              struct pam_response **resp, void *credentials)
@@ -51,7 +60,7 @@ sfcBasicConv(int num_msg, const struct pam_message **msg,
 }
 
 static int
-_sfcBasicAuthenticateRemote(char *user, char *pw, char *rhost)
+_sfcBasicAuthenticateRemote(char *user, char *pw, AuthExtras *extras)
 {
   struct pam_conv sfcConvStruct = {
     sfcBasicConv,
@@ -63,18 +72,15 @@ _sfcBasicAuthenticateRemote(char *user, char *pw, char *rhost)
 
   rc = pam_start(SFCB_PAM_APP, user, &sfcConvStruct, &pamh);
 
+  if (extras && extras->clientIp) {
+    pam_set_item(pamh, PAM_RHOST, extras->clientIp);
+  }
+
   if (rc == PAM_SUCCESS) {
     rc = pam_authenticate(pamh, PAM_SILENT);
   }
 
   if (rc == PAM_SUCCESS) {
-    /*
-     * host based authentication not yet supported - needs client IP
-     * address extraction in httpAdapter 
-     */
-    if (rhost) {
-      pam_set_item(pamh, PAM_RHOST, rhost);
-    }
     rc = pam_acct_mgmt(pamh, PAM_SILENT);
   }
 
@@ -98,6 +104,13 @@ _sfcBasicAuthenticate(char *user, char *pw)
 {
   return _sfcBasicAuthenticateRemote(user, pw, NULL);
 }
+
+int
+_sfcBasicAuthenticate2(char *user, char *pw, AuthExtras *extras)
+{
+  return _sfcBasicAuthenticateRemote(user, pw, extras);
+}
+
 /* MODELINES */
 /* DO NOT EDIT BELOW THIS COMMENT */
 /* Modelines are added by 'make pretty' */
