@@ -96,6 +96,7 @@ New Features:
 - 3498932 Implement ModifyInstance for CIM_ListenerDestination
 - 3440300 Allow forced chunked responses
 - 3367333 New entry point for authentication library
+- 3367332 RHOST Support for PAM
 
 Bugs Fixed: 
 
